# WebSpamDetector

./: .terraform.lock.hcl  Dockerfile  README.md  autoscaling.tf  deploy.sh  docker-compose.yml  endpoints.http  image.tf  lb.tf  local.sh  main.tf  pyproject.toml  test.js
spamoverflow/: __init__.py
spamoverflow/controller/: detect_invalid_paras.py  priority.py  scan_email.py
spamoverflow/models/: customer.py  email_domains.py  emails.py
spamoverflow/tasks/: emails.py
spamoverflow/views/: routes.py
