[tool.poetry]
name = "spamoverflow-shenfuzhi"
version = "0.1.0"
description = ""
authors = ["Hanxiong Cai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
celery = {extras = ["sqs"], version = "^5.4.0"}
boto3 = "^1.34.95"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
